--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,9 @@
-# Byte-compiled / optimized / DLL files
+﻿# Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
 *$py.class
-
+yatube/static/
+yatube/media/
 # C extensions
 *.so
 
